fixed layout issue with header - content tbc but positioning is proving to be troublesome

--- a/CW1/src/version3/css/style.css
+++ b/CW1/src/version3/css/style.css
@@ -1,6 +1,7 @@
 body
 {
     background: rgb(250,250,250);
+    margin-top:150px;
 }
 header {
 display: block;
@@ -144,4 +145,41 @@ p
     margin-right: 250px;
     
 }
+
+#message-box
+{
+    float:left;
+    font-family: 'roboto', sans-serif;
+    text-align: left;
+    padding-left: 10px;
+    margin-right: 250px;
+    
+}
+
+#contact-details
+{
+    position:relative;
+    right: 30px;
+    padding-right:10px;
+    padding-left:10px;
+    background-color: green;
+
+}
+
+
+footer {
+	width:100%;
+	height:20px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
+footer p
+{
+    margin-left: 20px;
+    font-size: 9pt;
+    font-family: 'roboto', sans-serif;
+}
+
 
